src/objects/Process_Relationship__c.object
<CustomObject>
    <description>This is a master object in Quality Central.</description>
    <fields>
        <fullName>Operational_Process_Code__c</fullName>
        <formula>Operational_Process__r.Process_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operational Process Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operational Process</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Process__c.Type__c</field>
                <operation>equals</operation>
                <value>Operational Process</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Process Relationship (Standard Operational Process)</relationshipLabel>
        <relationshipName>Process_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Code__c</fullName>
        <formula>Standard_Operational_Process__r.Process_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Operational Process Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Relationship_Id__c</fullName>
        <description>This is combination of Standard Operational Process and Operational Process so user should not crate duplicate combination.</description>
        <label>Process Relationship Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Standard_Operational_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Operational Process</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Process__c.Type__c</field>
                <operation>equals</operation>
                <value>Standard Operational Process</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Process Relationship (Operational Process)</relationshipLabel>
        <relationshipName>Process_Relationship1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Process Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Process Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Relationship</pluralLabel>
    <recordTypes>
        <fullName>Standard_Operational_Process</fullName>
        <active>true</active>
        <label>Standard Operational Process</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>